# gsoc_23_opencv_pc_compression

./: CMakeLists.txt  README.md
include/: pointcloud.h  quantizer.h  vec.h
src/: main.cpp
